objects/mcdm_15__ApprovalsPageSettings__c.object
<CustomObject>
    <description>Contains Approvals Page settings for a user and/or a campaign</description>
    <fields>
        <fullName>mcdm_15__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Campaign</relationshipLabel>
        <relationshipName>Campaign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mcdm_15__ColumnFields__c</fullName>
        <description>The fields on campaign member to display in the pending approvals table</description>
        <label>Column Fields</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mcdm_15__Level__c</fullName>
        <description>The level name for the ApprovalsPageSetting record</description>
        <label>Level</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mcdm_15__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User</relationshipLabel>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approvals Page Settings</label>
    <nameField>
        <displayFormat>Settings {0000}</displayFormat>
        <label>Approvals Page Settings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approvals Page Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>